# SortWordsListApp

./: CMakeLists.txt  README.md
UnitTests/: ListManipulationsTest.cpp  LoadAndSaveTest.cpp  UnitTests.vcxproj  pch.cpp  pch.h
UnitTests/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
UnitTests/googletest/gtest.dir/Debug/gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  gtest.lastbuildstate
UnitTests/googletest/gtest.dir/Release/gtest.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  gtest.lastbuildstate
UnitTests/googletest/gtest_main.dir/Debug/: gtest_main.lib.recipe
UnitTests/googletest/gtest_main.dir/Debug/gtest_main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
UnitTests/googletest/gtest_main.dir/Release/: gtest_main.lib.recipe
UnitTests/googletest/gtest_main.dir/Release/gtest_main.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
include/: ListManipulations.hpp  LoadAndSave.hpp
src/: ListManipulations.cpp  LoadAndSave.cpp  main.cpp
